--- a/app/assets/stylesheets/vote.scss
+++ b/app/assets/stylesheets/vote.scss
@@ -337,3 +337,105 @@
   width: 20%;
   left: 70%;
 }
+
+.vote__thirdQuestion--third {
+  position: absolute;
+  top: 15%;
+  left: 15%;
+  width: 70%;
+  height: 70%;
+}
+
+.vote__thirdQuestion--first {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
+}
+
+.vote__thirdQuestion--second {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
+}
+
+.vote__thirdQuestion--title--third {
+  position: absolute;
+  top: 5%;
+  left: 15%;
+  color: #5F6065;
+  width: 70%;
+  text-align: center;
+  height: 20%;
+  font-size: 3vh;
+  font-family: 'Raleway', sans-serif;
+}
+
+.vote__thirdQuestion--title--first {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
+}
+
+.vote__thirdQuestion--title--second {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
+}
+
+.vote__thirdQuestion--info--third {
+  position: absolute;
+  top: 10%;
+  left: 15%;
+  color: #5F6065;
+  width: 70%;
+  text-align: center;
+  height: 20%;
+  font-size: 2vh;
+  font-family: 'Raleway', sans-serif;
+}
+
+.vote__thirdQuestion--info--first {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
+}
+
+.vote__thirdQuestion--info--second {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
+}
+
+.upper__vote {
+  position: absolute;
+  top: 15%;
+  left: 10%;
+  width: 50%;
+  height: 30%;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  border: solid 1px black;
+  border-radius: 15%;
+  font-size: 3vh;
+  padding: 5%;
+}
+
+.downer__vote {
+  position: absolute;
+  bottom: 15%;
+  right: 10%;
+  width: 50%;
+  height: 30%;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  border: solid 1px black;
+  border-radius: 15%;
+  font-size: 3vh;
+  padding: 5%;
+}
