--- a/app/assets/stylesheets/vote.scss
+++ b/app/assets/stylesheets/vote.scss
@@ -1,11 +1,9 @@
 .vote {
   position: absolute;
-  top: 0%;
-  left: 0%;
-  height: 100vh;
-  width: 100vw;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
   z-index: 20;
-  background: white;
 }
 
 .vote__songs--second {
