--- a/app/assets/stylesheets/playlistshow.scss
+++ b/app/assets/stylesheets/playlistshow.scss
@@ -252,11 +252,19 @@
   height: 50%;
   width: 10%;
   z-index: 30;
-  cursor: cell;
+  cursor: pointer;
 }
 
 .songs__in__in__playlist {
   width: 90%;
   height: 100%;
   cursor: pointer;
+}
+
+.end__button {
+  position: absolute;
+  right: 0%;
+  background: cyan;
+  height: 100%;
+  width: 10%;
 }
