--- a/app/assets/stylesheets/playlistshow.scss
+++ b/app/assets/stylesheets/playlistshow.scss
@@ -3,7 +3,7 @@
   overflow: hidden;
   height: 100%;
   width: 100%;
-  background: black;
+  background: #393E46;
 }
 
 .light {
@@ -16,14 +16,29 @@
 
 .song__playlist--dark {
   position: absolute;
-  top: 34%;
+  top: 25%;
   left: 35%;
   width: 30%;
-  height: 66%;
+  height: 60%;
   overflow: scroll;
   background: black;
   border: solid red 1px;
   z-index: 25;
+}
+
+.song__playing--dark {
+  position: absolute;
+  top: 85%;
+  height: 5%;
+  width: 30%;
+  left: 35%;
+  border: solid 1px white;
+  background: black;
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  padding-top: 0.25%;
+
 }
 
 .song__playlist--light {
@@ -44,7 +59,9 @@
   padding: 4%;
   padding-left: 8%;
   color: red;
-  border-bottom: solid .25px red;
+  border-top: solid .25px red;
+  border-right: solid .25px red;
+  border-left: solid .25px red;
   font-family: 'Raleway', sans-serif;
   cursor: pointer;
 }
@@ -78,38 +95,21 @@
 
 .black__screen--dark {
   position: absolute;
-  top: 85%;
-  height: 15%;
+  top: 90%;
+  height: 10%;
   width: 100%;
-  background: darkgrey;
+  border-top: solid 1.5px red;
+  background: black;
   z-index: 15;
 }
 
 .black__screen--light {
   position: absolute;
-  top: 85%;
-  height: 15%;
+  top: 90%;
+  height: 10%;
   width: 100%;
-  background: lightgrey;
+  background: black;
   z-index: 15;
-}
-
-.right--arrow {
-  position: absolute;
-  right: 15%;
-  height: 100%;
-  width: 10%;
-  background: red;
-  cursor: pointer;
-}
-
-.left--arrow {
-  position: absolute;
-  left: 0%;
-  height: 100%;
-  width: 10%;
-  background: green;
-  cursor: pointer;
 }
 
 .shuffle--button {
@@ -171,9 +171,9 @@
 
 .playlist__search {
   position: absolute;
-  top: 95%;
-  left: 40%;
-  width: 20%;
+  top: 0%;
+  left: 35%;
+  width: 30%;
   height: 5vmin;
   background: grey;
   border-radius: 50%;
@@ -207,9 +207,9 @@
 
 .songs__search--active {
   position: absolute;
-  top: 85%;
-  left: 40%;
-  width: 20%;
+  top: 37px;
+  left: 35%;
+  width: 347px;
   height: 10%;
   font-family: 'Raleway', sans-serif;
   background: black;
@@ -228,14 +228,7 @@
 .searched__songs {
   position: relative;
   font-family: 'Raleway', sans-serif;
-  padding: 2%;
-  border: solid 1px white;
-}
-
-.searched__songs {
-  position: relative;
-  font-family: 'Raleway', sans-serif;
-  padding: 2%;
+  padding: 5%;
   border: solid 1px white;
 }
 
@@ -248,10 +241,15 @@
   position: absolute;
   top: 20%;
   right: 0%;
-  background: red;
   height: 50%;
   width: 10%;
   z-index: 30;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  font-style: bold;
+  font-size: 3vmin;
+  padding-top: 0.5%;
+  color: red;
   cursor: pointer;
 }
 
@@ -261,10 +259,71 @@
   cursor: pointer;
 }
 
-.end__button {
+.end__button--play {
   position: absolute;
-  right: 0%;
-  background: cyan;
-  height: 100%;
-  width: 10%;
+  top: 20%;
+  left: 47.25%;
+  height: 60%;
+  width: 5%;
+  background: white;
+}
+
+.end__button--pause {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
+}
+
+.pause__button--play {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
+}
+
+.pause__button--pause {
+  position: absolute;
+  top: 20%;
+  left: 47.25%;
+  height: 60%;
+  width: 5%;
+  background: white;
+}
+
+.right--arrow {
+  position: absolute;
+  top: 20%;
+  right: 32.5%;
+  height: 60%;
+  width: 5%;
+  background: black;
+  cursor: pointer;
+}
+
+.left--arrow {
+  position: absolute;
+  top: 20%;
+  left: 32.5%;
+  height: 60%;
+  width: 5%;
+  background: black;
+  cursor: pointer;
+}
+
+.shuffle__button {
+  position: absolute;
+  top: 20%;
+  left: 25%;
+  height: 60%;
+  width: 4%;
+  background: white;
+  cursor: pointer;
+}
+
+.songs__in--search {
+  position: relative;
+  padding: 2.5%;
+  color: white;
+  border: solid 1px white;
 }
