--- a/app/assets/stylesheets/playlistshow.scss
+++ b/app/assets/stylesheets/playlistshow.scss
@@ -19,7 +19,7 @@
   top: 25%;
   left: 35%;
   width: 30%;
-  height: 60%;
+  height: 57.5%;
   overflow: scroll;
   background: black;
   border: solid red 1px;
@@ -28,8 +28,8 @@
 
 .song__playing--dark {
   position: absolute;
-  top: 85%;
-  height: 5%;
+  top: 82.5%;
+  height: 7.5%;
   width: 30%;
   left: 35%;
   border: solid 1px white;
@@ -83,6 +83,7 @@
   left: 35%;
   height: 32.5vh;
   width: 30vw;
+  z-index: 30;
 }
 
 .video--vote {
